--- a/static/styles.css
+++ b/static/styles.css
@@ -1,5 +1,14 @@
+body {
+    background-color:rgb(45, 59, 77);
+    font-family: 'Poppins', sans-serif;
+}
+
+
 h1 {
     text-align: center;
+    font-family: 'Black Ops One', serif;
+    color: white;
+    font-size: 3em;
 }
 
 #game-board {
@@ -7,11 +16,38 @@ h1 {
     display: grid;
     grid-template-columns: repeat(5, 50px);
     margin-top: 20px;
-    width: 200px;
-    height: 200px;
+    width: 250px;
 }
 
 .cell {
-    width: 40px;
+    width: 45px;
+    height: 45px;
+    margin-top: 0.5em;
+}
+
+button {
     padding: 10px;
+    margin-left: 0.5em;
+    margin-top: 1em;
+}
+
+.buttons {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+}
+
+.miss {
+    background-color: #ff6262;
+}
+
+.hit {
+    background-color: #44c770;
+}
+
+#message {
+    text-align: center;
+    margin-top: 2em;
+    font-size: 1.5em;
+    color: #d5d5d5;
 }
