--- a/templates/index.html
+++ b/templates/index.html
@@ -5,19 +5,21 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="/static/styles.css">
     <title>Battleship</title>
-    <!-- <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@1.0.0/css/bulma.min.css"> -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Black+Ops+One&family=Michroma&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
 </head>
 <body>
-    <h1>Battleship Game</h1>
+    <h1>Battleship.</h1>
     <div id="game-board">
         <!-- Game board UI will be generated here -->
     </div>
         
-    <section class="section">
-        <div class="columns is-centered">
-            <div class="column is-half is-align-items-center">
+    <section>
+        <div>
+            <div class="buttons">
                 <button class = 'button' id="start-game">Start Game</button>
-                <button class = 'button' id="restart-game">Restart Game</button>
+                <button class = 'button' id="restart-game">Reset</button>
             </div>
         </div>
     </section>
